fixed spacing issue with form

--- a/src/index.css
+++ b/src/index.css
@@ -587,7 +587,7 @@
 
 .form-wrapper{
   background-color: #ddeae3;
-  padding: 0 300px 0 300px;
+  padding: 0 100px 0 100px;
   border-radius: 30px;
 }
 
@@ -642,10 +642,10 @@
 }
 
 .back-btn{
-  margin-top: 30px;
+  
   background-color: #ddeae3;
   box-shadow: 0 4px 8px rgba(187, 214, 199, 0);
- 
+  margin-top: 20px;
   padding: 5px;
   padding-left: 8px;
   padding-right: 8px;
@@ -669,7 +669,7 @@
 
 .back-image{
   height: 2vh;
-  margin-top: 40px;
+  margin-top: 30px;
   
 }
 
